# mocode

./: .coverage  .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml  test_write.md
docs/: cli.md  gateway.md  installation.md  permission.md  plugins.md  provider.md  skills.md  web-api.md  webui-plan.md
mocode/: __init__.py  __main__.py  agent.py  app.py  compact.py  config.py  event.py  interrupt.py  main.py  message_queue.py  message_utils.py  paths.py  permission.py  prompt.py  provider.py  sdk.py  session.py  store.py  subagent.py  tool.py
mocode/cli/: __init__.py  app.py
mocode/core/: __init__.py  agent.py  agent_facade.py  compact.py  config.py  events.py  installer.py  message_queue.py  orchestrator.py  permission.py  permission_handler.py  plugin_coordinator.py  session.py  session_coordinator.py  utils.py
mocode/dream/: __init__.py  agent.py  cursor.py  manager.py  prompts.py  scheduler.py  snapshot.py
mocode/gateway/: __init__.py  app.py  base.py  bus.py  config.py  crypto.py  logging.py  manager.py  media.py  registry.py  router.py  tools.py  transcription.py  weixin.py
mocode/plugins/: __init__.py  base.py  context.py  decorators.py  loader.py  (+4 more)
nanocode/: __init__.py  __main__.py  main.py  sdk.py
tests/: conftest.py  test_agent.py  test_app.py  test_compact.py  test_config.py  test_events.py  test_image.py  test_interrupt.py  test_message_queue.py  test_message_utils.py  test_orchestrator.py  test_permission.py  test_plugins.py  test_prompt_builder.py  test_provider.py  test_session.py  test_subagent.py  test_tools.py  test_utils.py
(+194 files in other folders)
