[project]
name = "mocode"
version = "0.1.0"
description = "A CLI coding assistant powered by LLM"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "weixin-bot-sdk>=0.2.0",
]

[project.optional-dependencies]
gateway = ["weixin-bot-sdk>=0.2.0"]

[project.scripts]
mocode = "mocode.main:main"
