[project]
name = "mocode"
version = "0.1.0"
description = "A CLI coding assistant powered by LLM"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pycryptodome>=3.19",
    "croniter>=1.3",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mocode = "mocode.main:main"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
