[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mocode"
version = "0.2.0"
description = "A CLI coding assistant powered by LLM"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pycryptodome>=3.19",
    "croniter>=1.3",
    "tzdata>=2024.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "lark-oapi>=1.4.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mocode = "mocode.main:main"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
